# confctl

./: .gitignore  .mise.toml  Cargo.toml  Dockerfile  README.md  blogpost-confctl-en.md  blogpost-confctl-pt.md  blogpost-confctl.md  install.sh  releases_notes.toml
.cargo/: config.toml
.github/scripts/: release.py
.github/workflows/: ci.yml  release.yml  tag.yml
examples/: register.rs
specs/: README.md  _schema.yaml  build.yaml  cli.yaml  edit.yaml  index.yaml  output.yaml  parser.yaml  resolver.yaml  transform.yaml  vault.yaml
src/: diff.rs  env_edit.rs  main.rs  tests.rs
src/vault/: cli.rs  client.rs  config.rs  crypto.rs  mod.rs  storage.rs
src/vault/backends/: bunker.rs  gcp.rs  hcp.rs  mod.rs
testdata/: app.env  config.json  config.toml  config.yaml  docker-compose.yml  os-release
