[package]
name = "confctl"
version = "0.0.3"
edition = "2021"
description = "CLI for querying configuration files (JSON, YAML, TOML)"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1"
colored = "2"
atty = "0.2"
base64 = "0.22"
